# arturo

./: .gitignore  .gitmodules  Makefile  README.md  TODO.md
applications/test_code/coregfx/: graphics.c
applications/test_code/coregfx/include/: gfxtest.h
applications/test_code/kernel/: filesystem.c  test_app.c
applications/test_code/kernel/include/: testapp.h  testsub.h
applications/testing/: test_app.c
build_env/: _c.make  _hardware.make  common.make  config.make  hardware.make
documents/: gdsfonts.zoo  kernel.md  notes.md
documents/fontconvert/: Makefile  fontconvert.c
images/: CMakeLists.txt  Makefile  PicoDVI  cmake.sh  tinyusb  upload.sh
images/firmware/: CMakeLists.txt
images/firmware/kernel/: CMakeLists.txt  main.c  taskmanager.c
images/firmware/kernel/hardware/: _sound.c  dvi_640x480.c  dvi_pinout.c  fileio.c  gamepad.c  mouse.c  sound.c  timing.c  tmds_encode_custom.h  usb_driver.c  usb_storage.c
images/firmware/kernel/hardware/gamepad_drivers/: gamepad_drivers.c  snes_usb.c
images/firmware/kernel/include/: common.h  font_8x8.h  include  internal.h  support.h
images/firmware/kernel/include/hardware/: dvi_common.h  fileio.h  gamepad.h  gamepad_drivers.h  kbdcodes.h  miscellany.h  mouse.h  sound.h  usb_interface.h
images/firmware/kernel/include/interface/: dvi_common.h  fileio.h  gamepad.h  miscellany.h  mouse.h  sound.h  usb_interface.h
images/firmware/kernel/include/internal/: dvi_common.h  fileio.h  gamepad.h  gamepad_drivers.h  keyboard.h  miscellany.h  mouse.h  sound.h  usb_interface.h
images/firmware/kernel/include/support/: console.h  control_codes.h  fileio.h  font_8x8.h  kbd_codes.h  keyboard.h  miscellany.h
images/firmware/kernel/locale/: keymaps.py
images/firmware/kernel/support/: console.c  fileio.c  keyboard.c  locale.c  logo.c
images/firmware/kernel/testing/: directory_test.c  taskmanager.c  test_app.c
images/firmware/kernel/user_code/testing/: test_app.c
images/scripts/: makeconfig.py  makelogo.py
images/scripts/fonts/: FZX.tap  Sinclair.fzx.asm  convert.py
libraries/: libraries.h
libraries/graphics/: atomic.c  drawing.c  ellipse.c  fontdata.h  fonts.c  fontstructures.h  port.c  triangle.c
libraries/graphics/fonts/: FreeMono12pt7b.h  FreeMono18pt7b.h  FreeMono24pt7b.h  FreeMono9pt7b.h  FreeMonoBold12pt7b.h  FreeMonoBold18pt7b.h  FreeMonoBold24pt7b.h  FreeMonoBold9pt7b.h  FreeMonoBoldOblique12pt7b.h  FreeMonoBoldOblique18pt7b.h  FreeMonoBoldOblique24pt7b.h  FreeMonoBoldOblique9pt7b.h  FreeMonoOblique12pt7b.h  FreeMonoOblique18pt7b.h  FreeMonoOblique24pt7b.h  FreeMonoOblique9pt7b.h  FreeSans12pt7b.h  FreeSans18pt7b.h  FreeSans9pt7b.h  FreeSansBold12pt7b.h  FreeSansBold18pt7b.h  FreeSansBold24pt7b.h  FreeSansBold9pt7b.h  FreeSansBoldOblique12pt7b.h  FreeSansBoldOblique18pt7b.h  FreeSansBoldOblique24pt7b.h  FreeSansBoldOblique9pt7b.h  FreeSansOblique12pt7b.h  FreeSansOblique18pt7b.h  FreeSansOblique24pt7b.h  FreeSansOblique9pt7b.h  FreeSerif12pt7b.h  FreeSerif18pt7b.h  FreeSerif24pt7b.h  FreeSerif9pt7b.h  FreeSerifBold12pt7b.h  FreeSerifBold18pt7b.h  FreeSerifBold24pt7b.h  FreeSerifBold9pt7b.h  FreeSerifBoldItalic12pt7b.h  (+26 more)
libraries/graphics/fonts/fonts/: Makefile
libraries/graphics/fonts/fonts/fontconvert/: Makefile
libraries/graphics/include/: atomic.h  fontinclude.h  graphics.h
libraries/test/: test_main.c
libraries/test/include/: test.h  test_sub.h
simulator/: Makefile
simulator/include/: artsim.h  kernel
simulator/source/: gamepad.xxx  gfx.c  keyboard.xxx  main.c  system.c
simulator/source/artsim/: dummy.c  fileio.c  fileio.c.xxx  gamepad.c  keyboard.c  main.c  miscellany.c  render.c  sound.c  system.c
