# ***************************************************************************************
# ***************************************************************************************
#
#		Name : 		CMakeLists.txt
#		Author :	Paul Robson (paul@robsons.org.uk)
#		Date : 		18th December 2024
#		Reviewed :	No
#		Purpose :	Middle level CMake configuration
#
# ***************************************************************************************
# ***************************************************************************************

add_subdirectory(kernel)
